--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -3,4 +3,18 @@
     <string name="news_test">範例新聞</string>
     <string name="to_diary">回顧問卷</string>
     <string name="to_test">test</string>
+    <string name="to_noti_news">發送新聞提醒</string>
+    <string name="to_noti_esm">發送問卷提醒</string>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+    <string name="pref_title_enable_notifications">Enable notifications</string>
+    <string name="pref_title_notification_time">Notification time</string>
+
+    <string name="settings_button_text">Settings</string>
+
+    <!-- Strings related to notification channels -->
+    <string name="channel_name">All Notifications</string>
+    <string name="channel_description">All notifications</string>
+    <string name="title_activity_settings">Settings</string>
 </resources>
