--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -6,6 +6,11 @@
     <string name="to_noti_news">發送新聞提醒</string>
     <string name="to_noti_esm">發送問卷提醒</string>
 
+    <string name="_30_seconds">30 seconds</string>
+    <string name="_10_seconds">10 seconds</string>
+    <string name="_5_seconds">5 seconds</string>
+
+
     <!-- Example settings for Notifications -->
     <string name="pref_header_notifications">Notifications</string>
     <string name="pref_title_enable_notifications">Enable notifications</string>
