--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="channel_name">All Notifications</string>
     <string name="channel_description">All notifications</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="btn_to_noti_list">通知紀錄</string>
 </resources>
