--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="channel_description">All notifications</string>
     <string name="title_activity_settings">Settings</string>
     <string name="btn_to_noti_list">通知紀錄</string>
+    <string name="setting">setting</string>
 </resources>
