--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="title_activity_settings">Settings</string>
     <string name="btn_to_noti_list">通知紀錄</string>
     <string name="setting">setting</string>
+    <string name="esm">esm</string>
 </resources>
