--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -68,4 +68,8 @@
     <string name="continue_activity_permission_rational">Continue</string>
     <string name="enable_disable_button_activity_recognition">Enable/Disable Activity Recognition</string>
     <string name="user_name">user_name</string>
+
+    <!-- nested viewpager-->
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
