--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -73,10 +73,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- alarm-->
-    <string name="sett_reminder_header">Set Reminder</string>
+    <string name="sett_reminder_header">允許發問卷時間區間</string>
     <string name="sett_reminder_label">Remind Me</string>
-    <string name="sett_reminder_desc">We will remind you to make entiries of your expense</string>
-    <string name="sett_reminder_time_label">Set Reminder Time</string>
-    <string name="sett_reminder_time_content">8 : 00 PM</string>
+    <string name="sett_reminder_desc">請至少設定12小時，少於12小時自動會幫您改回12小時</string>
+    <string name="sett_reminder_time_label">設定開始時間</string>
+    <string name="sett_reminder_time_content">8 : 00 AM</string>
 
 </resources>
