--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -75,8 +75,9 @@
     <!-- alarm-->
     <string name="sett_reminder_header">允許發問卷時間區間</string>
     <string name="sett_reminder_label">Remind Me</string>
-    <string name="sett_reminder_desc">請至少設定12小時，少於12小時自動會幫您改回12小時</string>
+    <string name="sett_reminder_desc">請至少設定12小時，並以整點為單位(只能設定一次)</string>
     <string name="sett_reminder_time_label">設定開始時間</string>
+    <string name="sett_reminder_time_label_ee">設定結束時間</string>
     <string name="sett_reminder_time_content">8 : 00 AM</string>
 
 </resources>
