--- a/surveyandroid/src/main/res/values/strings.xml
+++ b/surveyandroid/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Time Me</string>
+    <string name="app_name">NewsMoment</string>
     <string name="example_survey">Example Survey</string>
     <string name="please_specify">Please specify</string>
     <string name="next">Next</string>
