--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="chart_label_storm">風傳媒</string>
     <string name="chart_label_cna">中央社</string>
     <string name="chart_label_ebc">東森</string>
-    <string name="chart_label_ettoday">ET</string>
+    <string name="chart_label_ettoday">ETTODAY</string>
     <string name="chart_label_cts">華視</string>
 
     <string name="upload">上傳本地資料</string>
