--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -96,4 +96,10 @@
     <string name="chart_label_cts">華視</string>
 
     <string name="upload">上傳本地資料</string>
+
+    <string-array name="device_array">
+        <item>請選擇</item>
+        <item>318f4fea56e7070c (pixel 4a)</item>
+        <item>046827517ac92b09 (sm a52s)</item>
+    </string-array>
 </resources>
