--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -121,4 +121,11 @@
     <string name="physical_activity">physical_activity</string>
     <string name="notification_policy_access">notification_policy_access</string>
     <string name="access_granted">權限已經開啟</string>
+    <!--    login -->
+    <string name="login_success">登入成功</string>
+    <string name="login_failed">登入失敗，需要幫忙請來信詢問</string>
+    <string name="account_is_empty">帳號還沒打阿</string>
+    <string name="password_is_empty">密碼還沒打阿</string>
+    <string name="account_wrong_format">帳號格式好像錯了阿</string>
+
 </resources>
