--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -87,15 +87,15 @@
 
     <string name="chart_label_newsmoment">NewsMoment screen time</string>
 
-    <string name="chart_label_chinatimes">中時</string>
-    <string name="chart_label_ltn">自由</string>
-    <string name="chart_label_setn">三立</string>
+    <string name="chart_label_chinatimes">旺旺中時</string>
+    <string name="chart_label_ltn">自由時報</string>
+    <string name="chart_label_setn">三立新聞網</string>
     <string name="chart_label_udn">聯合</string>
     <string name="chart_label_storm">風傳媒</string>
     <string name="chart_label_cna">中央社</string>
     <string name="chart_label_ebc">東森</string>
-    <string name="chart_label_ettoday">ETTODAY</string>
-    <string name="chart_label_cts">華視</string>
+    <string name="chart_label_ettoday">Ettoday</string>
+    <string name="chart_label_cts">華視新聞</string>
 
     <string name="upload">上傳本地資料</string>
 
