--- a/app_i/src/main/res/values/strings.xml
+++ b/app_i/src/main/res/values/strings.xml
@@ -127,5 +127,40 @@
     <string name="dummy_notification_title">Congratulations! 🎉🎉🎉</string>
     <string name="dummy_notification_text">You have post a notification to Android 13!!!</string>
 
+    <string name="activity_recognition_permission_rational_dialog_title">Activity Recognition Permission Needed</string>
+    <string name="notification_permission_rational_dialog_title">Notification Permission Needed</string>
+    <string name="permission_rational_dialog_message">To make everything properly work, you need to give permission to New Moment.</string>
+    <string name="permission_rational_dialog_positive_button_text">Request a permission</string>
+    <string name="permission_rational_dialog_negative_button_text">No thanks</string>
 
+    <string name="activity_recognition_settings_dialog_title">Activity Recognition Permission Needed</string>
+    <string name="settings_dialog_message">Give permission manually inside the app\'s settings</string>
+
+    <string name="notification_settings_dialog_title">Notification Permission Needed</string>
+
+    <string name="settings_dialog_positive_button_text">Go to settings</string>
+    <string name="settings_dialog_negative_button_text">No thanks</string>
+
+    <string name="transition_update_request_success">Transition updates requested</string>
+    <string name="transition_update_request_failed">Requesting transition updates failed</string>
+    <string name="transition_update_remove_success">Transition updates removed</string>
+    <string name="transition_update_remove_failed">Removing transition updates failed</string>
+
+    <string name="activity_update_request_success">Activity updates requested</string>
+    <string name="activity_update_request_failed">Requesting activity updates failed</string>
+    <string name="activity_update_remove_success">Activity updates removed</string>
+    <string name="activity_update_remove_failed">Removing activity updates failed</string>
+
+    <string name="start_tracking">Start</string>
+    <string name="stop_tracking">Stop</string>
+    <string name="reset_tracking">Reset</string>
+    <string name="time_to_start">It\'s time to start activity</string>
+
+    <string name="still">Still</string>
+    <string name="walking">Walking</string>
+    <string name="running">Running</string>
+
+    <string name="still_text">You are currently standing still!</string>
+    <string name="walking_text">You are walking!</string>
+    <string name="running_text">You are running, keep doing it!</string>
 </resources>
